<resources>
    <string name="app_name">ACDAT-Calculadora</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnIgual">=</string>
    <string name="btnMas">+</string>
    <string name="btnMenos">-</string>
    <string name="btnMR">MR</string>
    <string name="btnMmas">M+</string>
    <string name="btnMmenos">M-</string>
    <string name="btnC">C</string>
    <string name="btnMC">MC</string>
    <string name="btnComa">,</string>
    <string name="btnMult">*</string>
    <string name="btnDiv">/</string>
    <string name="btnMasMenos">+/-</string>
</resources>