<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/bloqueBotones"
        android:layout_width="366dp"
        android:layout_height="460dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="410dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnMC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:width="50dp"
            android:height="77dp"
            android:text="@string/btnMC"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/btnMmas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:width="50dp"
            android:height="77dp"
            android:text="@string/btnMmas"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/btnMmenos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:width="50dp"
            android:height="77dp"
            android:text="@string/btnMmenos"
            android:textSize="20sp"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/btnMR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:width="50dp"
            android:height="77dp"
            android:text="@string/btnMR"
            android:textSize="20sp"
            app:layout_column="3"
            app:layout_row="0" />

        <Button
            android:id="@+id/btnC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:width="50dp"
            android:height="77dp"
            android:text="@string/btnC"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/btnMasMenos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:width="50dp"
            android:height="77dp"
            android:text="@string/btnMasMenos"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:width="50dp"
            android:height="77dp"
            android:text="@string/btnDiv"
            android:textSize="20sp"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/btnMult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:width="50dp"
            android:height="77dp"
            android:text="@string/btnMult"
            android:textSize="20sp"
            app:layout_column="3"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:width="50dp"
            android:height="77dp"
            android:text="@string/btn7"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:width="50dp"
            android:height="77dp"
            android:text="@string/btn8"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:width="50dp"
            android:height="77dp"
            android:text="@string/btn9"
            android:textSize="20sp"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/btnMenos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:width="50dp"
            android:height="77dp"
            android:text="@string/btnMas"
            android:textSize="20sp"
            app:layout_column="3"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:width="50dp"
            android:height="77dp"
            android:text="@string/btn4"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:width="50dp"
            android:height="77dp"
            android:text="@string/btn5"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:width="50dp"
            android:height="77dp"
            android:text="@string/btn6"
            android:textSize="20sp"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/btnMas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:width="50dp"
            android:height="77dp"
            android:text="@string/btnMenos"
            android:textSize="20sp"
            app:layout_column="3"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:width="50dp"
            android:height="77dp"
            android:text="@string/btn1"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_row="4" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:width="50dp"
            android:height="77dp"
            android:text="@string/btn2"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_row="4" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:width="50dp"
            android:height="77dp"
            android:text="@string/btn3"
            android:textSize="20sp"
            app:layout_column="2"
            app:layout_row="4" />

        <Button
            android:id="@+id/btnIgual"
            android:layout_width="wrap_content"
            android:layout_height="155dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:width="50dp"
            android:height="77dp"
            android:text="@string/btnIgual"
            android:textSize="20sp"
            app:layout_column="3"
            app:layout_row="4"
            app:layout_rowSpan="2" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:width="50dp"
            android:height="77dp"
            android:text="@string/btn0"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_row="5" />

        <Button
            android:id="@+id/btnComa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:width="50dp"
            android:height="77dp"
            android:text="@string/btnComa"
            android:textSize="20sp"
            app:layout_column="2"
            app:layout_row="5" />
    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/txtCalculadora"
        android:layout_width="363dp"
        android:layout_height="118dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="93dp"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="362dp"
        android:layout_height="124dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCalculadora" />
</androidx.constraintlayout.widget.ConstraintLayout>